# AuTomato

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
backend/: Cargo.toml  DOCS.md
backend/src/: cache.rs  install.rs  main.rs  registry_state.rs  views.rs
compiler/: Cargo.toml  DOCS.md
compiler/examples/: dump_workspace.rs
compiler/src/: ast.rs  emit.rs  lib.rs  registry.rs  typecheck.rs  workspace.rs
compiler/tests/: dispatch.rs  smoke.rs
docs/: PLAN.exclude.txt  PROJECT_SPEC.md  auto_fetch_modules.md  automato_implementation_plan.md  compiler_refactor_plan.md  docker_workspaces.md  execution_change_1.md  execution_change_2_v1.md  execution_change_2_v2.md  module_change_1.md  tinygo_support.md
frontend/: FRONTEND_DOCS.md  README.md  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  app.css  main.tsx
frontend/src/lib/: export.ts  registry.ts  store.ts  typecheck.ts  types.ts
frontend/src/lib/components/: BranchNode.tsx  Canvas.tsx  ConfigPanel.tsx  ConstantNode.tsx  EnvConstNode.tsx  ExitNode.tsx  InstallModal.tsx  LoopNode.tsx  ModuleNode.tsx  OriginNode.tsx  Palette.tsx  StructNode.tsx  Toolbar.tsx  TypesEditor.tsx
go-infer/: DIRECTIVES.md  go.mod  infer.go
modules/: MODULES_DOCS.md
modules/automato/cron/: README.md  cron.go  definitions.json  go.mod  metadata.json
modules/automato/gmail/: README.md  definitions.json  metadata.json  send.go
modules/automato/http-request/: README.md  definitions.json  fetch.go  go.mod  metadata.json
modules/automato/http-request-build/: README.md  build.go  definitions.json  metadata.json
modules/automato/json-parse/: README.md  definitions.json  metadata.json  parse.go
modules/automato/log/: README.md  definitions.json  go.mod  log.go  metadata.json
modules/automato/return/: README.md  definitions.json  go.mod  metadata.json  return.go
modules/automato/string/: README.md  definitions.json  metadata.json  string.go
modules/automato/webhook/: README.md  definitions.json  go.mod  metadata.json  webhook.go
