[workspace]
resolver = "2"
members = ["backend", "compiler"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["AuTomato contributors"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.8.9"
anyhow = "1"
thiserror = "2.0.18"
uuid = { version = "1", features = ["v4", "serde"] }
