[package]
name = "automato-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
compiler = { path = "../compiler", package = "automato-compiler" }
tower-http = { version = "0.6.8", features = ["cors"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
tempfile = "3"

[[bin]]
name = "automato-backend"
path = "src/main.rs"
