[package]
name = "automato-backend"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
compiler = { path = "../compiler", package = "automato-compiler" }
tower-http = { version = "0.6.8", features = ["cors"] }
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
tempfile = "3"
notify-debouncer-mini = "0.4"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
toml = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "blocking"] }
flate2 = "1"
tar = "0.4"
hex = "0.4"
base64 = "0.22"

[[bin]]
name = "automato-backend"
path = "src/main.rs"
